Update index.html for profile image

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div class="row about-info wide" data-animate-block>
 
                         <div class="column lg-6 md-12 about-info__pic-block">
-                            <img src="images/msg2.PNG" srcset="images/msg2.PNG" alt="" class="about-info__pic" data-animate-el>
+                            <img src="my_no_bg.PNG" srcset="my_no_bg.PNG" alt="" class="about-info__pic" data-animate-el>
                         </div>
 
                         <div class="column lg-6 md-12 " style="margin-bottom: 3%;">
