Add Privacy Policy and Terms & Conditions links
Added links to Privacy Policy and Terms & Conditions.

--- a/index.html
+++ b/index.html
@@ -380,6 +380,10 @@
                             <a href="mailto:gurjarmahisingh33@gmail.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">Say Hello.</a>
                         </div>
                     </div> <!-- end contact-bottom -->
+                        <div style="text-align: center;">
+                            <a href="privacy-policy.html">Privacy Policy</a> | 
+                            <a href="terms-and-conditions.html">Terms & Conditions</a>
+                    </div>
 
                 </section> <!-- end contact -->
 
@@ -411,7 +415,7 @@
             </footer> <!-- end s-footer -->
 
         </div> <!-- end -s-pagewrap -->
-
+ 
 
         <!-- Java Script
     ================================================== -->
