Update contact email and copyright year in privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -113,11 +113,11 @@
     <h2>Contact Us</h2>
     <p>
         If you have any questions about this Privacy Policy, please contact us at:
-        <br><strong>Email:</strong> [your-email@example.com]
+        <br><strong>Email:</strong> mahendrasinghstudy6977@gmail.com
     </p>
 
     <div class="footer">
-        © [Year] Self Manager App. All rights reserved.
+        © 2025 <a href="https://gurjarms.github.io/msportfolio">Self Manager App</a>. All rights reserved.
     </div>
 </div>
 
