Update contact email and copyright year in HTML

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -109,11 +109,11 @@
     <h2>Contact Information</h2>
     <p>
         For questions regarding these Terms and Conditions, contact us at:
-        <br><strong>Email:</strong> [your-email@example.com]
+        <br><strong>Email:</strong> mahendrasinghstudy6977@gmail.com
     </p>
 
     <div class="footer">
-        © [Year] Self Manager App. All rights reserved.
+        © 2025 <a href="https://gurjarms.github.io/msportfolio">Self Manager App</a>. All rights reserved.
     </div>
 </div>
 
