--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, Helvetica, sans-serif;
             background-color: #f6f8fa;
-            margin: 0;
+            margin: 0; 
             padding: 0;
             color: #333;
         }
@@ -41,8 +41,8 @@
 
 <div class="container">
     <h1>Terms and Conditions</h1>
-    <p><strong>Last updated:</strong> [Enter Date]</p>
-
+    <p><strong>Last updated:</strong> 27/12/2025</p>
+ 
     <p>
         By using the <strong>Self Manager</strong> mobile application,
         you agree to comply with and be bound by the following Terms and Conditions.
