Update last updated date in privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -41,7 +41,7 @@
 
 <div class="container">
     <h1>Privacy Policy</h1>
-    <p><strong>Last updated:</strong> [Enter Date]</p>
+    <p><strong>Last updated:</strong> 27/12/2025</p>
 
     <p>
         This Privacy Policy explains how the <strong>Self Manager</strong> mobile application
