Update contact information and footer link

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -106,14 +106,14 @@
         Continued use of the app constitutes acceptance of the updated terms.
     </p>
 
-    <h2>Contact Information</h2>
+    <h2>Contact Information</h2> 
     <p>
         For questions regarding these Terms and Conditions, contact us at:
         <br><strong>Email:</strong> mahendrasinghstudy6977@gmail.com
     </p>
 
     <div class="footer">
-        © 2025 <a href="https://gurjarms.github.io/msportfolio">Self Manager App</a>. All rights reserved.
+        © 2025 <a href="https://gurjarms.github.io/msportfolio/home.html">Self Manager App</a>. All rights reserved.
     </div>
 </div>
 
