--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -110,14 +110,14 @@
         Any changes will be reflected on this page.
     </p>
 
-    <h2>Contact Us</h2>
+    <h2>Contact Us</h2> 
     <p>
         If you have any questions about this Privacy Policy, please contact us at:
         <br><strong>Email:</strong> mahendrasinghstudy6977@gmail.com
     </p>
 
     <div class="footer">
-        © 2025 <a href="https://gurjarms.github.io/msportfolio">Self Manager App</a>. All rights reserved.
+        © 2025 <a href="https://gurjarms.github.io/msportfolio/home.html">Self Manager App</a>. All rights reserved.
     </div>
 </div>
 
